Replace names, photos, and text.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Clarence Taylor</span>
+                <span class="d-block d-lg-none">Suga Chan</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -40,14 +40,14 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Clarence
-                        <span class="text-primary">Taylor</span>
+                        Suga
+                        <span class="text-primary">Chan</span>
                     </h1>
                     <div class="subheading mb-5">
                         3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
                         <a href="mailto:name@email.com">name@email.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">私はアジャイルなフレームワークを活用する経験があり、高いレベルの概要を提供するための堅牢なシノプシスを作成します。企業戦略への反復的なアプローチは、協力的な思考を育むことで、全体的な価値提案をさらに推進します。</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
@@ -65,7 +65,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Senior Web Developer</h3>
                             <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <p>積極的な支配を確実にするためのwin-winの生存戦略を持ち込みます。結局のところ、前進して、X世代から進化した新しい常態が、効率的なクラウドソリューションに向かう滑走路にいます。リアルタイムで生成されるユーザーのコンテンツは、オフショアのための複数の接点を持つでしょう。</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
                     </div>
@@ -73,7 +73,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Web Developer</h3>
                             <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <p>手軽に手に入るものを活用し、おおよその付加価値活動を特定してベータテストを行います。DevOpsからの追加のクリックスルーでデジタルの隔たりを無視します。情報高速道路上のナノテクノロジーの浸透は、純粋にボトムラインに焦点を当てるループを閉じます。</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
                     </div>
@@ -81,7 +81,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Junior Web Designer</h3>
                             <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <p>ワークフロー内でのポッドキャスティングの運用変更管理を行い、フレームワークを確立します。シームレスな主要パフォーマンス指標をオフラインで活用し、長期的な成果を最大化します。スタートアップのメンタリティに深く立ち入りながら、クロスプラットフォームの統合で収束を得るために目を離さないでください。</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
                     </div>
@@ -89,7 +89,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Web Design Intern</h3>
                             <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+                            <p>プラグアンドプレイネットワークを介して共同で権限を持った市場を管理します。導入基盤の利点を得た後、B2Cユーザーを動的に延期します。革命的なROIなしで、顧客主導の収束を劇的に可視化します。</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
                     </div>
@@ -165,8 +165,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>ウェブ開発者であるだけでなく、私はほとんどの時間を屋外で過ごすのが好きです。冬には熱心なスキーヤーであり、初心者のアイスクライマーです。コロラド州では温かい季節になると、マウンテンバイク、フリークライミング、カヤックを楽しんでいます。</p>
+                    <p class="mb-0">屋内に閉じ込められると、私はいくつかのSFおよびファンタジージャンルの映画やテレビ番組に従います。私は目指すシェフであり、フリータイムの大部分をフロントエンドのウェブ開発の最新技術の進歩を探索することに費やしています。</p>
                 </div>
             </section>
             <hr class="m-0" />
